@@ -104,6 +104,7 @@
     * 0346 FIX: Fix folder visibility in WATO for unpriviledged users...
     * 0385 FIX: Better error handling for invalid service regex in rule conditions...
     * 0389 FIX: Showing LDAP settings on site specific global settings page now...
+    * 0400 FIX: WATO BI editor now supports percentages for count_ok...
 
     Notifications:
     * 0362 sms: now searching PATH for sendsms and smssend commands...
